# agent-frameworks-workspace

./: .env.example  .gitignore  README.md  render.yaml
autogen/: README.md  main.py  pyproject.toml
crewai/: .gitignore  README.md  api.py  pyproject.toml
crewai/src/crew/: __init__.py  crew.py  main.py  runner.py
crewai/src/crew/config/: agents.yaml  tasks.yaml
crewai/src/crew/tools/: __init__.py  custom_tool.py  run_shell_tool.py  run_tests_tool.py
docs/: crewai_continuous_improvement_system.plan.md
langgraph/: README.md  main.py  pyproject.toml
pydantic-ai/: README.md  main.py  pyproject.toml
