[project]
name = "crewai-crew"
version = "0.1.0"
description = "CrewAI testing crew"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.80",
    "crewai-tools>=0.20",
]

[project.scripts]
run-crew = "crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crew"]
